# energia-solar-simulador

./: app.py  main.py  pyproject.toml  simulacao_solar.csv  simulador_simples.ipynb  simulador_ui.ipynb  simulação.csv
