[project]
name = "simulacao-energia-solar"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "numpy-financial>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
]
